Changing C interface naming

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,28 +6,16 @@ set(HYDRA_MODULE_NAME "HIP")
 
 # Use CMake's modern FindCUDAToolkit module
 find_package(CUDAToolkit REQUIRED)
-find_package(OpenMP REQUIRED)
+find_package(OpenMP)
 
 # Find optional dependencies
 find_package(Matlab COMPONENTS MAIN_PROGRAM OPTIONAL_COMPONENTS MEX_COMPILER)
 find_package(Python COMPONENTS Development NumPy OPTIONAL)
 
-# Set OpenMP and CUDA flags depending on the platform
-if (CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
-    # For MSVC (Windows)
-    set(OPENMP_FLAG "/openmp")
-    set(CUDA_NVCC_FLAGS "${CUDA_NVCC_FLAGS} -Xcompiler=/openmp")
-elseif (CMAKE_CXX_COMPILER_ID STREQUAL "GNU" OR CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
-    # For GCC/Clang (Linux/macOS)
-    set(OPENMP_FLAG "-fopenmp")
-    set(CUDA_NVCC_FLAGS "${CUDA_NVCC_FLAGS} -Xcompiler=-fopenmp")
-endif()
-
-# Apply the flags globally, or apply to specific targets later
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OPENMP_FLAG}")
 
 # Setup backend Hydra CUDA library (static) for CUDA building
 add_subdirectory(src/c/Cuda)
+add_subdirectory(src/c/test_back)
 
 # Setup MEX interface if Matlab was found
 if (Matlab_FOUND)
